Home page about us and contact us page added, Admin has been customized, models meta and verbose names added

--- a/StudentSupport/templates/Base/base.html
+++ b/StudentSupport/templates/Base/base.html
@@ -105,10 +105,10 @@
 
     {% block required_js %}
         <!-- Required Jquery -->
-        <script type="text/javascript" src="{% static 'bower_components/jquery/js/jquery.min.js' %}"></script>
+        <script type="text/javascript" src="{% static 'bower_components/jquery/js/jquery-3.5.1.min.js' %}"></script>
         <script type="text/javascript" src="{% static 'bower_components/jquery-ui/js/jquery-ui.min.js' %}"></script>
         <script type="text/javascript" src="{% static 'bower_components/popper.js/js/popper.min.js' %}"></script>
-        <script type="text/javascript" src="{% static 'bower_components/bootstrap/js/bootstrap.min.js' %}"></script>
+        <script type="text/javascript" src="{% static 'bower_components/bootstrap/New/js/bootstrap.min.js' %}"></script>
         <!-- modernizr js -->
         <script type="text/javascript" src="{% static 'bower_components/modernizr/js/modernizr.js' %}"></script>
     {% endblock required_js %}
