--- a/StudentSupport/templates/email_templates/recover_password_template.html
+++ b/StudentSupport/templates/email_templates/recover_password_template.html
@@ -3,7 +3,7 @@
   <head>
     <meta name="viewport" content="width=device-width" />
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>Recover Password</title>
+    <title>Issue page</title>
     <style>
       img {
         border: none;
@@ -25,8 +25,8 @@
 
       table {
         border-collapse: separate;
-        mso-table-lspace: 0pt;
-        mso-table-rspace: 0pt;
+        mso-table-lspace: 0;
+        mso-table-rspace: 0;
         width: 100%; }
         table td {
           font-family: sans-serif;
