--- a/StudentSupport/templates/home_auth/index.html
+++ b/StudentSupport/templates/home_auth/index.html
@@ -275,7 +275,7 @@
                                 <div class="form-group row" id="faculty-name-div">
                                     <label class="col-sm-4 col-form-label" for="faculty-name"> Name : </label>
                                     <div class="col-sm-8">
-                                        <input type="text" data-toggle="tooltip" title="It should contain First name, Initial of middle name and lastname such as 'Barry H. Allen'." class="form-control" name="faculty-name" id="faculty-name" required>
+                                        <input type="text" class="form-control" name="faculty-name" id="faculty-name" required>
                                         <div id="Error_faculty-name" style="display: none; color: red;"></div>
                                     </div>
                                 </div>
@@ -333,15 +333,25 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark ftco_navbar ftco-navbar-light" id="ftco-navbar">
         <div class="container d-flex align-items-center">
-            <a class="navbar-brand" href="index.html">Student Support System</a>
+            <a class="navbar-brand" href="{% url 'home' %}">Student Support System</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="oi oi-menu"></span> Menu
             </button>
             <div class="collapse navbar-collapse" id="ftco-nav">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item active">
-                        <a href="#" class="nav-link pl-0">
+                        <a href="{% url 'home' %}" class="nav-link pl-0">
                             Home
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="{% url 'courtesy' %}" class="nav-link">
+                            About Us
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="{% url 'contact_us' %}" class="nav-link">
+                            Contact Us
                         </a>
                     </li>
                     <li class="nav-item">
@@ -656,9 +666,10 @@
                 </ul>
             </div>
             <div class="col-6 col-md">
-                <b><h5 style="color:white;">About</h5></b>
+                <h5 style="color:white;">About</h5>
                 <ul class="list-unstyled text-small">
-                    <li><a class="text-muted" href="#">Contact Us</a></li>
+                    <li><a class="text-muted" href="{% url 'contact_us' %}">Contact Us</a></li>
+                    <li><a class="text-muted" href="{% url 'courtesy' %}">About Us</a></li>
                 </ul>
             </div>
 			<div class="col-6 col-md">
