done some changes and created readme.md file

--- a/StudentSupport/templates/home_auth/courtesy.html
+++ b/StudentSupport/templates/home_auth/courtesy.html
@@ -50,7 +50,7 @@
 	  </nav>
     <!-- END nav -->
 
-    <section class="hero-wrap hero-wrap-2" style="background-image: url('{% static 'assets/images/gec1.png' %}');">
+    <section class="hero-wrap hero-wrap-2" style="background-image: url('{% static 'assets/landing/images/Photos/slide1.jpg' %}');">
 <!--      <div class="overlay"></div>-->
       <div class="container">
         <div class="row no-gutters slider-text align-items-center justify-content-center">
@@ -73,32 +73,6 @@
                             <div class="page-wrapper wrpr">
                                 <!-- Page-body start -->
                                 <div class="page-body">
-                                    <div class="page-header">
-                                        <h4 class="team">Guided By</h4>
-                                        <div class="row align-items-end">
-                                            <div class="col-lg-4">
-                                                <div class="page-header-breadcrumb">
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="row users-card justify-content-around">
-                                        <div class="col-md-6 col-lg-3 ftco-animate">
-                                            <div class="staff card">
-                                                <div class="card-block">
-                                                <div class="img-wrap d-flex align-items-stretch">
-                                                    <div class="img align-self-stretch" style="background-image: url({% static 'assets/landing/images/developers/kpk.jpg' %});"></div>
-                                                </div>
-                                                <div class="user-content">
-                                                        <h4 class="">Prof. Karshan Kandoriya</h4>
-                                                        <div class="d-flex justify-content-center mb-3">
-                                                        </div>
-                                                        <p class="m-b-0 text-muted email" style="font-size:14px;color:black;"><i class="fa fa-envelope" style="font-size:22px;color:black;"></i>  karshankandoriya@gmail.com</p>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        </div>
                                         <div class="page-header">
                                             <h4 class="team">Design & Developed By</h4>
                                             <div class="row align-items-end">
@@ -155,7 +129,7 @@
                                                 <div class="staff card">
                                                     <div class="card-block">
                                                         <div class="img-wrap d-flex align-items-stretch">
-                                                            <div class="img align-self-stretch" style="background-image: url({% static 'assets/landing/images/developers/vishwa.jpg' %});"></div>
+                                                            <div class="img align-self-stretch"></div>
                                                         </div>
                                                         <div class="user-content">
                                                             <h4 class="">Vishwa Rajput</h4>
@@ -176,7 +150,7 @@
                                                 <div class="staff card">
                                                     <div class="card-block">
                                                         <div class="img-wrap d-flex align-items-stretch">
-                                                            <div class="img align-self-stretch" style="background-image: url({% static 'assets/landing/images/developers/kinjal.jpg' %});"></div>
+                                                            <div class="img align-self-stretch"></div>
                                                         </div>
                                                         <div class="user-content">
                                                             <h4 class="">Kinjal Doshi</h4>
@@ -227,7 +201,7 @@
                 </ul>
             </div>
 			<div class="col-6 col-md">
-                <p style="color:white;">Copyright © 2020 GEC Bhavnagar. All Rights Reserved.</p>
+                <p style="color:white;">Copyright © All Rights Reserved.</p>
             </div>
         </div>
     </footer>
