--- a/StudentSupport/templates/home_auth/index.html
+++ b/StudentSupport/templates/home_auth/index.html
@@ -364,37 +364,32 @@
                             Sign in
                         </a>
                     </li>
-                    <li class="nav-item">
-                        <a href="#" class="nav-link">
-                            Contact
-                        </a>
-                    </li>
                 </ul>
 	      </div>
         </div>
     </nav>
 
     <section class="home-slider owl-carousel">
-        <div class="slider-item" style="background-image:url({% static 'assets/landing/images/gec1.png' %});">
+        <div class="slider-item" style="background-image:url({% static 'assets/landing/images/Photos/slide1.jpg' %});">
             <div class="overlay"></div>
             <div class="container">
                 <div class="row no-gutters slider-text align-items-center justify-content-center" data-scrollax-parent="true">
                     <div class="col-md-8 text-center ftco-animate">
                         <h1 class="mb-4">
-                            Government Engineering College <span>Bhavnagar</span>
+                            College Name <span>Place</span>
                         </h1>
                     </div>
                 </div>
             </div>
         </div>
 
-        <div class="slider-item" style="background-image:url({% static 'assets/landing/images/gec3.png' %});">
+        <div class="slider-item" style="background-image:url({% static 'assets/landing/images/Photos/slide2.jpg' %});">
             <div class="overlay"></div>
             <div class="container">
                 <div class="row no-gutters slider-text align-items-center justify-content-center" data-scrollax-parent="true">
                     <div class="col-md-8 text-center ftco-animate">
                         <h1 class="mb-4">
-                            Government Engineering College <span>Bhavnagar</span>
+                            College Name <span>Place</span>
                         </h1>
                     </div>
                 </div>
@@ -499,7 +494,7 @@
         </div>
     </section>
 
-    <section class="ftco-intro" style="background-image: url({% static 'assets/landing/images/gec3.png' %});" data-stellar-background-ratio="0.5">
+    <section class="ftco-intro" style="background-image: url({% static 'assets/landing/images/Photos/slide2.jpg' %});" data-stellar-background-ratio="0.5">
         <div class="overlay"></div>
         <div class="container">
             <div class="row">
@@ -638,16 +633,16 @@
     	<div class="container-wrap">
     		<div class="row no-gutters">
 				<div class="col-md-3 ftco-animate">
-					<div class="gallery img d-flex align-items-center" style="background-image: url({% static 'assets/landing/images/gec1.png' %});"></div>
+					<div class="gallery img d-flex align-items-center" style="background-image: url({% static 'assets/landing/images/Photos/college1.jpg' %});"></div>
 				</div>
 				<div class="col-md-3 ftco-animate">
-					<div class="gallery img d-flex align-items-center" style="background-image: url({% static 'assets/landing/images/gec2.png' %});"></div>
+					<div class="gallery img d-flex align-items-center" style="background-image: url({% static 'assets/landing/images/Photos/college2.jpg' %});"></div>
 				</div>
 				<div class="col-md-3 ftco-animate">
-					<div class="gallery img d-flex align-items-center" style="background-image: url({% static 'assets/landing/images/gec3.png' %});"></div>
+					<div class="gallery img d-flex align-items-center" style="background-image: url({% static 'assets/landing/images/Photos/college3.jpg' %});"></div>
 				</div>
 				<div class="col-md-3 ftco-animate">
-					<div class="gallery img d-flex align-items-center" style="background-image: url({% static 'assets/landing/images/gec1.png' %});"></div>
+					<div class="gallery img d-flex align-items-center" style="background-image: url({% static 'assets/landing/images/Photos/college4.jpg' %});"></div>
 				</div>
         	</div>
     	</div>
@@ -673,7 +668,7 @@
                 </ul>
             </div>
 			<div class="col-6 col-md">
-                <p style="color:white;">Copyright © 2020 GEC Bhavnagar. All Rights Reserved.</p>
+                <p style="color:white;">Copyright © All Rights Reserved.</p>
             </div>
         </div>
     </footer>
