Some changes made in templates

--- a/StudentSupport/templates/hod/feedback_section.html
+++ b/StudentSupport/templates/hod/feedback_section.html
@@ -2,7 +2,7 @@
 {% load static %}
 <!-- Title block > Start -->
 {% block title %}
-    {{ fb_type|capfirst }} Semester Average Feedback
+    {{ fb_type|capfirst }} Semester Feedback
 {% endblock title %}
 <!-- Title block > End -->
 
@@ -107,7 +107,7 @@
                         <div class="col-sm-12 col-md-12 col-lg-6 d-flex justify-content-center">
                             <div class="page-header-title">
                                 <div class="d-inline">
-                                    <h3>{{ fb_type|capfirst }} Semester Average Feedback</h3>
+                                    <h3>{{ fb_type|capfirst }} Semester Feedback</h3>
                                 </div>
                             </div>
                         </div>
